# StealthPortal

./: .gitignore  .slugignore  README.md  create_db.py  main.py  query_db.py  requirements.py  requirements.txt
.vercel/: project.json
instance/: site.db
portal/: __init__.py  crypto.py  forms.py  routes.py  sockets.py
portal/engine/: db_storage.py
portal/templates/: about.html  base.html  index.html  (+4 more)
templates/: base.html  index.html  login.html  register.html
wif-FastAPI/: .dockerignore  Dockerfile  README.md  auth.py  docker-compose.yml  forms.py  init.py  main.py  portal.db
wif-Flask/: main.py
wif_Django/: db.sqlite3  pyproject.toml
wif_Django/portal/: settings.py  urls.py
wif_Django/static/js/: script.js
wif_Django/stealth/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
wif_Django/stealth/migrations/: 0001_initial.py
wif_Django/stealth/templates/: about.html  base.html  index.html
wif_Django/templates/: history.html  index.html  login.html  register.html
wif_FastAPI/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
wif_FastAPI/portal/engine/: __init__.py  forms.py  models.py  portal.db
wif_FastAPI/portal/routes/: __init__.py  routes.py
wif_FastAPI/portal/security/: bearer.py
wif_FastAPI/portal/static/css/: style.css
wif_FastAPI/portal/static/js/: script.js
wif_FastAPI/portal/templates/: about.html  base.html  index.html  profile.html
wif_FastAPI/portal/ws/: __init__.py  manager.py  sockets.py
wif_Flask/: create_db.py  requirements.txt
(+32 files in other folders)
